dependency: bump checkerframework.version from 3.49.5 to 3.50.0
Bumps `checkerframework.version` from 3.49.5 to 3.50.0.

Updates `org.checkerframework:checker-qual` from 3.49.5 to 3.50.0
- [Release notes](https://github.com/typetools/checker-framework/releases)
- [Changelog](https://github.com/typetools/checker-framework/blob/master/docs/CHANGELOG.md)
- [Commits](https://github.com/typetools/checker-framework/compare/checker-framework-3.49.5...checker-framework-3.50.0)

Updates `org.checkerframework:checker` from 3.49.5 to 3.50.0
- [Release notes](https://github.com/typetools/checker-framework/releases)
- [Changelog](https://github.com/typetools/checker-framework/blob/master/docs/CHANGELOG.md)
- [Commits](https://github.com/typetools/checker-framework/compare/checker-framework-3.49.5...checker-framework-3.50.0)

---
updated-dependencies:
- dependency-name: org.checkerframework:checker-qual
  dependency-version: 3.50.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: org.checkerframework:checker
  dependency-version: 3.50.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>